5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1834_1278.log
== TEST (2019-06-25 16:30:23) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
print(quadro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:31:21) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
tam=size(quadro)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:31:42) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
tam=size(quadro)
print(tam)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:32:33) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
tam=size(quadro)
forma = shape(quadro)
print(forma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:33:10) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
tam=size(quadro)
forma = shape(quadro)
lin =shape(quadro)[0]
print(lin)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:33:23) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
tam=size(quadro)
forma = shape(quadro)
lin =shape(quadro)[1]
print(lin)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:33:55) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
tam=size(quadro)
forma = shape(quadro)
lin =shape(quadro)[0]
col =shape(quadro)[1]
print(lin)
print(col)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:35:33) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]
print(medalhas)

'	tam=size(quadro)
	forma = shape(quadro)
	lin =shape(quadro)[0]
	col =shape(quadro)[1]
	print(lin)
	print(col)
	print(forma)
'



-- ERROR:
File "XXXX", line 16
    '	tam=size(quadro)
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:35:39) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]
print(medalhas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:38:47) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]  #quantas colunas tem a matriz medalhas
total = 0 #variavel acumuladora

for j in range(medalhas):
	total = total + quadro[3,j]
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:39:16) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]  #quantas colunas tem a matriz medalhas
total = 0 #variavel acumuladora

for j in range(medalhas):
	total = total + quadro[3,j]
print(total)

a= 18+18+19
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:39:29) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]  #quantas colunas tem a matriz medalhas
total = 0 #variavel acumuladora

for j in range(medalhas):
	total = total + quadro[3,j]
print(total)

a= 19+18+19
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:39:36) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]  #quantas colunas tem a matriz medalhas
total = 0 #variavel acumuladora

for x in range(medalhas):
	total = total + quadro[3,j]
print(total)

a= 19+18+19
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:39:59) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]  #quantas colunas tem a matriz medalhas
total = 0 #variavel acumuladora

for x in range(medalhas):
	total = total + quadro[3,x]
print(total)

a= 19+18+19
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:40:30) 
-- CODE:
from numpy import *
# Definicao do quadro de medalhas
quadro = array ([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])

medalhas =shape(quadro)[1]  #quantas colunas tem a matriz medalhas
total = 0 #variavel acumuladora

for linha in range(medalhas):
	total = total + quadro[3,linha]
print(total)

a= 19+18+19
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:35:57) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
i = (a//111) - 1
j = (b//111) - 1
tempo = tempo + matdist[i, j]
a = b
b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)

-- EXECUTION TIME:
0.819195
-- ERROR:
  File "/home/codebench/codes/1834/1278/main.py", line 14
    i = (a//111) - 1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 09:36:10) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
tempo = tempo + matdist[i, j]
a = b
b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 09:49:40) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
i = (a//111) - 1
j = (b//111) - 1
tempo = tempo + matdist[i, j]
a = b
b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)
-- ERROR:
File "XXXX", line 14
    i = (a//111) - 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:50:23) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = b
	b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)
-- EXECUTION TIME:
5.38508
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 10:07:06) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
tempo = tempo + matdist[i, j]
a = b
b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)

-- EXECUTION TIME:
707.398
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 10:08:05) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
tempo = tempo + matdist[i, j]
a = b
b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)

-- EXECUTION TIME:
753.119
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 10:08:05) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
a = b
b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)
-- EXECUTION TIME:
1131.81
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 10:16:07) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = b
	b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)
-- EXECUTION TIME:
1.10897
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
